--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -67,7 +67,7 @@ nav a {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
-    background-color: rgba(0, 0, 0, 0.5s);
+    background-color: #6f7364;
     padding: 20px;
     border-radius: 5px;
 }
@@ -129,7 +129,7 @@ nav a {
     justify-items: center;
     text-align: center;
     padding: 20px;
-    box-shadow: 0 0 10px; rgba(0,0,0,0.2);
+    box-shadow: 0 0 10px;
 
 }
 
