--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,13 +7,13 @@ body, h1, h2, p, ul, li {
 /* Set a background color and text color for the whole page */
 body {
     background-color: #f0f0f0;
-    color: #333;
+    color: #f9f6f6;
     font-family: Arial, sans-serif;
 }
 
 /* Style the header with the logo and navigation */
 header {
-    background-color: #333;
+    background-color: #f6f5f5;
     color: #fff;
     text-align: center;
     padding: 10px 0;
@@ -91,7 +91,7 @@ nav a {
     display: inline-block;
     padding: 10px 20px;
     background-color: #ffffff;
-    color: #f9f4f4;
+    color: #4a90a0;
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
@@ -261,7 +261,7 @@ footer {
 
     .home-title {
         font-size: 35px;
-        color: #6f7364;
+        color: #39577c;
     }
     #text {
         background-color:#f9fbf3;}
@@ -271,7 +271,7 @@ footer {
         width: 60%;
     }
 .book{
-    background-color: #6f7364;
+    background-color: #ffffff;
 }
     #background {
         display: none;
