--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -13,7 +13,7 @@ body {
 
 /* Style the header with the logo and navigation */
 header {
-    background-color: #f6f5f5;
+    background-color: #6f7364;
     color: #fff;
     text-align: center;
     padding: 10px 0;
@@ -30,20 +30,20 @@ header {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
-    text-decoration: none;
+  
 }
 
 nav {
     margin-top: 10px;
     display: flex;
     justify-content: space-around;
-    text-decoration: none;
+ 
 }
 
 nav a {
     color: #fff;
     text-decoration: none;
-    margin: 0 10px;
+    margin: 10px;
 }
 
 /* Style the hero section */
@@ -53,7 +53,7 @@ nav a {
     background-position: center;
     text-align: center;
     padding: 100px 0;
-    color: #fff;
+    color: #5a5f5c;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin: top -100px; ;
@@ -99,7 +99,7 @@ nav a {
     margin-top: 20px;
 }
 .book{
-    background-color: rgb(237, 243, 243);
+    background-color: rgb(120, 168, 168);
     color: #3467b4;
     padding: 10px 20px;
     text-decoration: none;
@@ -130,7 +130,7 @@ nav a {
     justify-items: center;
     text-align: center;
     padding: 20px;
-    box-shadow: 0 0 10px;
+    box-shadow: 10px;
 
 }
 
