--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -14,7 +14,7 @@ body {
 /* Style the header with the logo and navigation */
 header {
     background-color: #6f7364;
-    color: #fff;
+    color: #79a08f;
     text-align: center;
     padding: 10px 0;
     display: grid;
