--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -156,18 +156,34 @@ nav a:hover {
   background-color: #ccc;
   line-height: 3em;
 }
-
+.sm-page4{
+  grid-area: page4;
+  background-color: #ccc;
+  line-height: 3em;
+}
+.sm-page5{
+  grid-area: page5;
+  background-color: #ccc;
+  line-height: 3em;
+}
 .top {
   grid-area: top;
   border-left: 1px solid;
 }
-
+.left{
+  grid-area: left;
+  border-left: 1px solid;
+}
 .left {
   grid-area: left;
   border-top: 1px solid;
   border-left: 1px solid;
 }
-
+.right {
+  grid-area: right;
+  border-top: 1px solid;
+  border-right: 1px solid;
+}
 .right {
   grid-area: right;
   border-top: 1px solid;
