--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -149,27 +149,27 @@ nav a:hover {
 .sm-page2 {
   grid-area: page2;
   background-color: #ccc;
-  line-height: 1em;
+  line-height: 2em;
 
 }
 .sm-page3 {
   grid-area: page3;
   background-color: #ccc;
-  line-height: 1em;
+  line-height: 3em;
 
 }
 .sm-page4{
   grid-area: page4;
   background-color: #ccc;
-  line-height: 1em;
+  line-height: 4em;
   
 
 }
 .sm-page5{
   grid-area: page5;
   background-color: #ccc;
-  line-height: 1em;
-  grid-template-areas: none;
+  line-height: 5em;
+  g
  
 }
 .top {
