--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -149,7 +149,7 @@ nav a:hover {
   grid-area: page2;
   background-color: #ccc;
   line-height: 3em;
-  grid-row: top;
+  grid-row: left;
 }
 .sm-page3 {
   grid-area: page3;
@@ -161,11 +161,7 @@ nav a:hover {
   background-color: #ccc;
   line-height: 3em;
 }
-.sm-page5{
-  grid-area: page5;
-  background-color: #ccc;
-  line-height: 3em;
-}
+
 
 .top {
   grid-area: top;
