--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -27,6 +27,7 @@ Fonts are separated by a | */
 }
 
 
+
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
@@ -191,4 +192,26 @@ nav a:hover {
   grid-area: bottom;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.wireframe{
+  border: 2px solid #000;
+  padding: 20px;
+}
+.box{
+  width: 100px;
+  height: 100px;
+  background-color: #3498db;
+}
+p{
+  font-size: 14px;
 }
