--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -287,4 +287,9 @@ footer {
     footer {
         margin-top: 25px;
     }
+    .fun-facts{
+        background-color: #3467b4;
+        padding: 20px;
+        margin:20px 0;
+    }
 }
