--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -293,27 +293,22 @@ footer {
         margin:20px 0;
     }
     form {
-        /* Center the form on the page */
+        /* Just to center the form on the page */
         margin: 0 auto;
         width: 400px;
-        /* Form outline */
+      
+        /* To see the limits of the form */
         padding: 1em;
         border: 1px solid #ccc;
         border-radius: 1em;
       }
       
-      ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-      
-      form li + li {
+      div + div {
         margin-top: 1em;
       }
       
       label {
-        /* Uniform size & alignment */
+        /* To make sure that all label have the same size and are properly align */
         display: inline-block;
         width: 90px;
         text-align: right;
@@ -321,55 +316,46 @@ footer {
       
       input,
       textarea {
-        /* To make sure that all text fields have the same font settings
-           By default, textareas have a monospace font */
+        /* To make sure that all text field have the same font settings
+           By default, textarea are set with a monospace font */
         font: 1em sans-serif;
       
-        /* Uniform text field size */
+        /* To give the same size to all text field */
         width: 300px;
+      
+        -moz-box-sizing: border-box;
         box-sizing: border-box;
       
-        /* Match form field borders */
+        /* To harmonize the look & feel of text field border */
         border: 1px solid #999;
       }
       
       input:focus,
       textarea:focus {
-        /* Additional highlight for focused elements */
+        /* To give a little highlight on active elements */
         border-color: #000;
       }
       
       textarea {
-        /* Align multiline text fields with their labels */
+        /* To properly align multiline text field with their label */
         vertical-align: top;
       
-        /* Provide space to type some text */
+        /* To give enough room to type some text */
         height: 5em;
+      
+        /* To allow users to resize any textarea vertically
+           It works only on Chrome, Firefox and Safari */
+        resize: vertical;
       }
       
       .button {
-        /* Align buttons with the text fields */
+        /* To position the buttons to the same position of the text fields */
         padding-left: 90px; /* same size as the label elements */
       }
       
       button {
-        /* This extra margin represent roughly the same space as the space
-           between the labels and their text fields */
+        /* This extra margin represent the same space as the space between
+           the labels and their text fields */
         margin-left: 0.5em;
       }
-      #feedback {
-        background-color: antiquewhite;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        padding: .5em;
-        /* make this element invisible until we are ready for it */
-        display: none;      
-    }
-    .moveDown {
-        margin-top: 3em;
-    }
-
-}
-
+      
