--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -37,10 +37,9 @@ header {
 nav {
     margin-top: 10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
  
 }
-
 nav a {
     color: #f0f0f0;
     text-decoration: none;
