--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -26,40 +26,6 @@ Fonts are separated by a | */
   --nav-hover-background-color: #396E94;
 }
 
-header {
-  /* Start on Row 1 */
-  grid-row: 1;
-  /* Start on the first column line and extend all the to the last column line */
-  grid-column: 1 / 4;
-}
-
-.sidebar-left {
-  /* Start on Row 2 */
-  grid-row: 2;
-  /* Start on the first column line and stop at the next column line */
-  grid-column: 1 / 2;
-}
-
-article {
-  /* Start on Row 2 */
-  grid-row: 2;
-  /* Start on the second column line and stop at the third column line */
-  grid-column: 2 / 3;
-}
-
-.sidebar-right {
-  /* Start on Row 2 */
-  grid-row: 2;
-  /* Start on the third column line and stop at the last column line */
-  grid-column: 3 / 4;
-}
-
-footer {
-  /* Start on Row 3, the last row */
-  grid-row: 3;
-  /* Start on the first column line and extend all the to the last column line */
-  grid-column: 1 / 4;
-}
 
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
@@ -228,3 +194,6 @@ nav a:hover {
   border-right: 1px solid;
 }
 
+header, footer {
+  grid-column: 1 / 4;
+}
