--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -37,7 +37,7 @@ Fonts are separated by a | */
   width: 45%;
   margin: 10px;
   padding: 10px;
-  background-color: #7df9ff;
+  background-color: #f9f9f9;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
