--- a/wwr/positionstyles.css
+++ b/wwr/positionstyles.css
@@ -5,7 +5,7 @@
   display:grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  gap: 20px;
+  grid-gap: 20px;
 
 }
 .red1 { 
@@ -35,179 +35,166 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
-  display: grid;
-  grid-template-columns: 50px 50px 50px 50px 50px;
-
 }
-.red2 { 
-  width: 50px; 
-  height: 50px; 
-  background-color: red;
-  margin-left: -50px;
-  margin-top: -50px;
+.red2 {
+  width: 100px; 
+  height: 100px; 
+  background-color: red; 
 } 
 .green2 { 
-  width: 50px; 
-  height: 50px; 
+  width: 100px; 
+  height: 100px; 
   background-color: green; 
- 
- 
+  margin: -50px 0 0 50px;
 } 
 .yellow2 {
-  width: 50px; 
-  height: 50px; 
+  width: 100px; 
+  height: 100px; 
   background-color: gold; 
-
+  margin: -50px 0 0 100px;
 } 
 .blue2 {
-
-  width: 50px; 
-  height: 50px; 
+  width: 100px; 
+  height: 100px; 
   background-color: blue; 
+  margin: -50px 0 0 150px;
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
-display: grid;
-grid-template-columns: 100px 100px; /* Create two columns */
-grid-column-gap: 20px; /* Add some gap between columns */
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+ grid-column-gap: 10%;
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
+  grid-column: 1/3;
   background-color: red; 
-  grid-column: 1/3; 
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 150px; 
   background-color: green;
-  grid-column: 1/2; 
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 150px; 
   background-color: gold; 
-  grid-column: 2/3;
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
-  background-color: blue; 
   grid-column: 1/3;
-  grid-row: 2/3;
+  background-color: blue; 
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
-  display: grid;
-  grid-template-columns: 100px 100px; 
-  grid-template-rows: 100px 100px; 
-  grid-gap: 10px; 
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 33.3% 33.3% 33.3%;
+  grid-gap: 0;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 400px; 
+  grid-column: 1/2;
+  grid-row: 1/3;
   background-color: red; 
-  grid-column: 1;
-  grid-row: 1;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
+  grid-column: 2/3;
+  grid-row:1/2;
   background-color: green; 
-  grid-column: 2;
-  grid-row: 1;
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
+  grid-column: 2/3;
+  grid-row: 2/3;
   background-color: gold; 
-  grid-column: 1;
-  grid-row: 2;
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
+  grid-column: 2/3;
+  grid-row: 3/4;
   background-color: blue; 
-  grid-column: 2;
-  grid-row: 2;
 } 
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
+  max-width: 600px;
   height: 400px;
-  display: grid;
-  grid-template-columns: 100px 100px; 
-  grid-template-rows: 100px 100px; 
-  grid-gap: 10px; 
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
-  float: left; 
-  shape-outside: polygon(0 0, 100% 0, 100% 100%, 0 100%); 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px; 
+    float:left;
   background-color: green; 
-  float: left; 
-} .yellow5 {
-  width: 100px; 
-  height: 100px; 
+
+} 
+.yellow5 {
+  width: 100%; 
+  height: 200px; 
+  font-size: 60%;
   background-color: gold; 
-  grid-column: 2;
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
-  grid-column: 2;
-}
+} 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
-  display: grid;
-  grid-template-columns: 100px 100px 100px 100px; /* Create four columns */
-  grid-template-rows: 100px 100px; /* Create two rows */
-  grid-gap: 10px; /* Add some gap between rows and columns */
-
+  display:grid;
+  grid-template-columns: repeat(6 1fr);
+  grid-template-rows: repeat(6, 100px);
+  grid-gap: 0;
+  width: 600px;
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 200px; 
+  grid-column: 1/4;
+  grid-row:1/2; 
+  z-index: 1;
   background-color: red; 
-  grid-column: 1 / 3; /* Place this box in columns 1 and 2 */
-  grid-row: 1 / 2; /* Place this box in row 1 */
-  z-index: 2; /* Set a higher z-index to control the layering */
-}
+} 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
+  grid-column: 1/3;
+  grid-row:5/6; 
+  z-index: 3;
   background-color: green; 
-  grid-column:grid-column: 2 / 4; /* Place this box in columns 2 and 3 */
-  grid-row: 2 / 3; /* Place this box in row 2 */
-  z-index: 1; /* Set a lower z-index to control the layering */
-}
+} 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 400px; 
+  grid-column: 4/6;
+  grid-row: 3/6;
+  z-index: 4;
   background-color: gold; 
-  grid-column: 1 / 3; /* Place this box in columns 1 and 2 */
-  grid-row: 2 / 3; /* Place this box in row 2 */
-  z-index: 1; /* Set a lower z-index to control the layering */
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 400px; 
+  grid-column: 2/5;
+  grid-row: 2/4;
+  z-index: 2;
   background-color: blue; 
-  grid-column: 3 / 5; /* Place this box in columns 3 and 4 */
-  grid-row: 1 / 2; /* Place this box in row 1 */
-  z-index: 2; /* Set a higher z-index to control the layering */
 } 
 
 
